--- a/backend/Jcc.Api/JccApi/appsettings.Development.json
+++ b/backend/Jcc.Api/JccApi/appsettings.Development.json
@@ -1,9 +1,12 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Db": "Server=localhost; port=5432; user id=postgres; password=Skayline*869;database=jcc_db;pooling=true;Integrated Security=true;Pooling=true"
   }
 }
