--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -8,4 +8,4 @@ RUN npm run build
 FROM nginx:alpine
 VOLUME /var/cache/nginx
 COPY --from=build app/dist/frontend /usr/share/nginx/html
-COPY ./config/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./dev/config/nginx.conf /etc/nginx/conf.d/default.conf
