feature: creating new relantionships

--- a/backend/Jcc.Api/JccApi/appsettings.Development.json
+++ b/backend/Jcc.Api/JccApi/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Db": "Server=localhost; port=5432; user id=postgres; password=PASSWORD_HERE;database=jcc_db;pooling=true;Integrated Security=true;Pooling=true"
+    "Db": "Server=localhost; port=5432; user id=postgres; password=Skayline*869;database=jcc_db;pooling=true;Integrated Security=true;Pooling=true"
   }
 }
