--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:14-alpine as build
+FROM node:16.13.0-alpine as build
 WORKDIR /app
 COPY package.json /app
 RUN npm install --silent
@@ -7,6 +7,7 @@ RUN npm run build
 
 FROM nginx:alpine
 VOLUME /var/cache/nginx
-COPY --from=build app/dist/frontend /usr/share/nginx/html
+# COPY --from=build app/dist/frontend /usr/share/nginx/html
+COPY ./dist/frontend /usr/share/nginx/html
 COPY ./heroku/config/default.conf.template /etc/nginx/conf.d/default.conf.template
 CMD /bin/sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
