--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,13 +1,10 @@
 FROM node:16.13.0-alpine as build
 WORKDIR /app
-COPY package.json /app
-RUN npm install --silent
+COPY ["package.json", "package-lock.json", "./"]
 COPY . .
-RUN npm run build
+RUN npm install --silent && npm run build
 
 FROM nginx:alpine
-VOLUME /var/cache/nginx
-# COPY --from=build app/dist/frontend /usr/share/nginx/html
-COPY ./dist/frontend /usr/share/nginx/html
+COPY --from=build /app/dist/frontend /usr/share/nginx/html
 COPY ./heroku/config/default.conf.template /etc/nginx/conf.d/default.conf.template
 CMD /bin/sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
