--- a/backend/Jcc.Api/Dockerfile.prod
+++ b/backend/Jcc.Api/Dockerfile.prod
@@ -16,4 +16,7 @@ RUN dotnet publish -c release -o /app --no-restore
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine
 WORKDIR /app
 COPY --from=build /app ./
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet JccApi.dll
+# CMD ASPNETCORE_URLS=http://*:$PORT dotnet JccApi.dll
+ENV ASPNETCORE_URLS=http://*:8080
+EXPOSE 8080
+ENTRYPOINT [ "dotnet", "JccApi.dll" ]
