--- a/backend/Jcc.Api/Dockerfile.prod
+++ b/backend/Jcc.Api/Dockerfile.prod
@@ -17,6 +17,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine
 WORKDIR /app
 COPY --from=build /app ./
 # CMD ASPNETCORE_URLS=http://*:$PORT dotnet JccApi.dll
-ENV ASPNETCORE_URLS=http://*:8080
-EXPOSE 8080
+ENV ASPNETCORE_URLS=http://*:$PORT
+EXPOSE $PORT
 ENTRYPOINT [ "dotnet", "JccApi.dll" ]
