--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -6,5 +6,5 @@ RUN npm install --silent && npm run build
 
 FROM nginx:alpine
 COPY --from=build /app/dist/frontend /usr/share/nginx/html
-COPY ./heroku/config/default.conf.template /etc/nginx/conf.d/default.conf.template
+COPY ./gcp/default.conf.template /etc/nginx/conf.d/default.conf.template
 CMD /bin/sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf" && nginx -g 'daemon off;'
